--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "reactstrap": "^8.6.0"
   },
   "devDependencies": {
     "all": "^0.0.0",
