--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^17.0.1",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
-    "reactstrap": "^8.6.0"
+    "reactstrap": "^8.6.0",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "all": "^0.0.0",
