--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-fileupload": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "react": "^17.0.1",
     "react-dom": "^16.14.0",
