check again afert error

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "scripts": {
     "dev": "react-scripts start",
     "start": "serve -s build",
-    "build": "react-scripts build",
+    "build": "yarn && cd ./client && yarn && yarn build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "heroku-postbuild": "npm run build",
